Creating song layout

--- a/android/app/src/main/res/layout/fragment_playlist.xml
+++ b/android/app/src/main/res/layout/fragment_playlist.xml
@@ -6,13 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".presentation.playlist.PlaylistFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_playlist"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:overScrollMode="never"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/view_playlist_song" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
