Creating song's recycler view

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorError">#EB2049</color>
     <color name="colorSecondary">#877A7C</color>
     <color name="colorTransparent">#00000000</color>
+    <color name="rippleOnSurface">#1FFFFFFF</color>
 </resources>
