--- a/android/app/src/main/res/drawable/ripple_on_song.xml
+++ b/android/app/src/main/res/drawable/ripple_on_song.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@android:color/white">
+    android:color="@color/rippleOnSurface">
     <item android:id="@android:id/mask">
         <shape>
             <solid android:color="@android:color/white" />
