Adding custom fonts

--- a/android/app/src/main/res/layout/view_playlist_song.xml
+++ b/android/app/src/main/res/layout/view_playlist_song.xml
@@ -37,6 +37,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
+        android:fontFamily="@font/nunito_semibold"
         android:textColor="@android:color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_artist"
@@ -50,6 +51,7 @@
         android:id="@+id/tv_artist"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/nunito"
         android:textColor="@color/colorOnSurface"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/tv_title"
