Creating player bottom biew

--- a/android/app/src/main/res/layout/fragment_song_player.xml
+++ b/android/app/src/main/res/layout/fragment_song_player.xml
@@ -7,13 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".presentation.songplayer.SongPlayerFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include
+        android:id="@+id/included_bottom_view"
+        layout="@layout/bottom_view_player"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginVertical="24dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
