--- a/android/app/src/main/res/layout/fragment_music_player.xml
+++ b/android/app/src/main/res/layout/fragment_music_player.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.songplayer.SongPlayerFragment">
+    tools:context=".presentation.musicplayer.MusicPlayerFragment">
 
     <include
         android:id="@+id/included_player_controls"
