--- a/android/app/src/main/res/layout/view_current_song.xml
+++ b/android/app/src/main/res/layout/view_current_song.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:transitionName="song_window">
 
     <View
         android:layout_width="0dp"
