--- a/android/app/src/main/res/drawable/background_bottom_view_player.xml
+++ b/android/app/src/main/res/drawable/background_bottom_view_player.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorOnSurfaceWithAlpha" />
+    <solid android:color="@color/colorSurface" />
     <corners android:radius="32dp" />
 </shape>
