--- a/android/app/src/main/res/layout/fragment_playlist.xml
+++ b/android/app/src/main/res/layout/fragment_playlist.xml
@@ -5,7 +5,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context=".presentation.playlist.PlaylistFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -58,7 +57,7 @@
         android:fitsSystemWindows="true"
         android:overScrollMode="never"
         android:paddingTop="24dp"
-        android:paddingBottom="8dp"
+        android:paddingBottom="32dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:listitem="@layout/view_playlist_song" />
@@ -92,13 +91,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone"
+        android:visibility="invisible"
         tools:visibility="visible" />
 
     <include
         android:id="@+id/included_empty_view"
         layout="@layout/view_empty_playlist"
-        android:visibility="gone"
-        tools:visibility="gone" />
+        android:visibility="invisible"
+        tools:visibility="invisible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
