--- a/android/app/src/main/res/layout/fragment_music_player.xml
+++ b/android/app/src/main/res/layout/fragment_music_player.xml
@@ -58,10 +58,44 @@
         android:gravity="center"
         android:textColor="@color/colorOnSurface"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/included_player_controls"
+        app:layout_constraintBottom_toTopOf="@+id/seek_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Blackpink" />
+
+    <SeekBar
+        android:id="@+id/seek_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginBottom="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_current_pos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_current_pos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0.8"
+        android:fontFamily="@font/nunito"
+        android:textColor="@android:color/white"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toTopOf="@id/included_player_controls"
+        app:layout_constraintStart_toStartOf="@id/seek_bar"
+        tools:text="00:00" />
+
+    <TextView
+        android:id="@+id/tv_duration"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0.8"
+        android:fontFamily="@font/nunito"
+        android:textColor="@android:color/white"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toTopOf="@id/included_player_controls"
+        app:layout_constraintEnd_toEndOf="@id/seek_bar"
+        tools:text="05:00" />
 
     <include
         android:id="@+id/included_player_controls"
